--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	//"image": "mcr.microsoft.com/devcontainers/base:bullseye",
 	"dockerComposeFile": "docker-compose.yml",
-	"service": "local-docker-2",
+	"service": "torch",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	// "features": {
 	// 	"ghcr.io/devcontainers/features/python:1": {}
