--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   torch:
     build: 
       context: .
-      dockerfile: torch/Dockerfile._one
+      dockerfile: torch/Dockerfile
     volumes:
       - ../..:/workspaces/torch:cached    
     command: sleep infinity  
@@ -18,7 +18,7 @@ services:
   tensorflow:
     build: 
       context: .
-      dockerfile: tensorflow/Dockerfile._two
+      dockerfile: tensorflow/Dockerfile
     volumes:
       - ../..:/workspaces/tensorflow:cached   
     command: sleep infinity     
@@ -59,7 +59,9 @@ services:
           - back-end
   web:
       restart: always
-      build: ./mlflow-web
+      build:
+        context: .
+        dockerfile: mlflow_web/Dockerfile
       image: mlflow_web
       container_name: mlflow_web
       depends_on:
