--- a/mlflow_web/Dockerfile
+++ b/mlflow_web/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9-slim
 COPY /mlflow_web/requirements.txt /tmp
 RUN pip install -r /tmp/requirements.txt
-COPY /mlflow_web/scripts/start.sh start.sh
-ENTRYPOINT ["./start.sh"]
+COPY /mlflow_web/scripts/start.sh /tmp/start.sh
+# ENTRYPOINT ["./start.sh"]
