--- a/.devcontainer/mlflow-web/Dockerfile
+++ b/.devcontainer/mlflow-web/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9-slim
 COPY /mlflow-web/requirements.txt /tmp
 RUN pip install -r /tmp/requirements.txt
-# COPY /mlflow_web/scripts/start.sh /tmp/start.sh
-# ENTRYPOINT ["./start.sh"]
+COPY /mlflow-web/scripts/start.sh /tmp/start.sh
+RUN chmod 777  /tmp/start.sh
+# ENTRYPOINT ["./tmp/start.sh"]
