--- a/mlflow-web/Dockerfile
+++ b/mlflow-web/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-slim
-COPY /mlflow-web/requirements.txt /tmp
-RUN pip install -r /tmp/requirements.txt
-COPY /mlflow-web/scripts/start.sh /tmp/start.sh
-RUN chmod 777 /tmp/start.sh
-CMD ["/bin/bash","./tmp/start.sh"]
+WORKDIR /app
+COPY /mlflow-web/requirements.txt .
+RUN pip install -r requirements.txt
+COPY /mlflow-web/scripts/start.sh .
+RUN chmod 777 start.sh
