--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -2,10 +2,16 @@ FROM python:3.9-slim
 LABEL maintainer="felipe mateos martin"
 
 COPY requirements.txt requirements.txt
+COPY requirements.test.txt requirements.test.txt
 
-RUN pip install -U --no-cache-dir pip && pip install \
+RUN pip install -U --no-cache-dir pip
+RUN pip install \
     --no-cache-dir \
-    -r requirements.txt
+    -r requirements.txt 
+
+RUN pip install \
+    --no-cache-dir \
+    -r requirements.test.txt 
 
 WORKDIR /app/
 
@@ -13,13 +19,4 @@ EXPOSE 8000 5000
 
 COPY src recomender-service
 COPY config config
-COPY scripts/start.sh start.sh
 
-# Directory to be mapped to the location on the host
-# where the mlflow artifacts are stored.
-# All unnecessary if using S3 u other provider
-#RUN   mkdir -p /mlflow/data
-
-ENTRYPOINT ["./start.sh"]
-
-CMD ["api"]
