--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -1,12 +1,19 @@
 FROM python:3.10-slim
 
-COPY /tensorflow/requirements.txt requirements.txt
-COPY /tensorflow/requirements.test.txt requirements.test.txt
+ARG NAME
+ENV name=$NAME
+
+WORKDIR /app/
+
+COPY /$name/requirements.txt requirements.txt
+COPY /$name/requirements.test.txt requirements.test.txt
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 RUN pip install -r requirements.test.txt
 
-WORKDIR /app/
+COPY /$name/src .
+
+
 
 COPY /tensorflow/src .
