--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     container_name: torch-models
     volumes:
        - ./data/torch:/app/data
+       - ./torch/src:/app/src
     container_name: torch-models
     networks:
           - back-end
@@ -25,6 +26,7 @@ services:
     image: jax:0.0.1
     volumes:
        - ./data/jax:/app/data
+       - ./jax/src:/app/src
     container_name: jax-models
     networks:
           - back-end
@@ -39,6 +41,7 @@ services:
     image: tensorflow:0.0.1
     volumes:
        - ./data/tensorflow:/app/data
+       - ./tensorflow/src:/app/src
     container_name: tensorflow-models
     networks:
           - back-end
